# Synthy

./: .gitignore  AGENTS.md  Cargo.toml  ROADMAP.md
.cargo/: config.toml
ESP_SYNTH/: CMakeLists.txt  hardware_reference.md  lolin32_lite_reference.md  planned_components.md  platformio.ini  sdkconfig.esp32-c6-lcd  sdkconfig.lolin32_lite
ESP_SYNTH/src/: CMakeLists.txt  idf_component.yml  main.cpp
src/: audio.rs  dsp.rs  main.rs  state.rs  ui.rs
